Closed Bug 1553295 Opened 7 years ago Closed 7 years ago

Discord: icons become transparent and do not reappear until hovered over

Categories

(Core :: Graphics: WebRender, defect, P2)

Unspecified
All
defect

Tracking

()

VERIFIED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox67 --- wontfix
firefox68 + verified
firefox69 --- verified

People

(Reporter: jan, Assigned: Gankra)

References

(Blocks 1 open bug, Regression, )

Details

(Keywords: correctness, nightly-community, regression)

Attachments

(3 files)

https://www.reddit.com/r/firefox/comments/brdgbv/discord_server_icons_become_transparent_ff_67/

Version: FF 67 Stable Environment: Windows 10 1809, NVidia GTX 1070 Addons: New Tong Wen Tang, Ublock Origin, Vimium, HTTPS Everywhere, Multi-account containers, Perapera Chinese Dictionary, Neat URL

WebRender force enabled by pref

Bug: Sometimes, when switching back to Discord tab after not having been on it for a while, some of the circular server icons become transparent and do not reappear until hovered over. This does not happen without WebRender.
Anyone running into a similar issue?

Can you reproduce this?

Flags: needinfo?(jan)

Not yet, but wanted to try tomorrow. (UNCONFIRMED)

I can reproduce this, and have a wr-capture on my mac that replays the issue in wrench.

Confirmed by Gankro.

Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(jan)
OS: Windows → All

quick notes from looking at the capture:

The scene.ron and resource_cache.ron both seem to look good. The icon is using svg masks and foreign-objects, so I expect we've just messed up in the blob code and are sending WR nothing if it boots out our texture to make room for the active tabs..?

Nical, can you take a peak at this?

Blocks: wr-68
Flags: needinfo?(nical.bugzilla)
Priority: -- → P2

I can also confirm this phenomena after forcing on Web Render 2.0

Windows 10 Pro v1903 x64
Geforce 1070Ti
Firefox 67

Attached image Untitled.png

Additional debugging tip for nical: you can reproduce this ~instantly by setting image.mem.surfacecache.min_expiration_ms=1 (needs a browser reload).

Then if I quickly cycle to some other tabs the icons are always gone when I return.

grabbing this since I'm out of important things to do and can already locally reproduce this

Assignee: nobody → a.beingessner
Flags: needinfo?(nical.bugzilla)

(In reply to Alexis Beingessner [:Gankro] from comment #9)

you can reproduce this ~instantly by setting image.mem.surfacecache.min_expiration_ms=1

Is this related to bug 1524280 comment 15 and bug 1524280 comment 19?

Attached file discord_test.zip

Attached: reduced version of discord to isolate the problematic icon.

Easiest way to reproduce:

  • Set image.mem.surfacecache.min_expiration_ms=1 (needs restart)
  • Open test-case
  • Open other tabs with images and stuff to purge the cache
  • View test-case again, icon should be invisible
  • Hover over where icon should be, should reappear

For the currently selected Discord Server you have to click the Server Icon to make it appear, it won't appear on hover.

Win10, GTX1060
mozregression --good 2018-01-15 --bad 2019-05-28 --pref gfx.webrender.all:true image.mem.surfacecache.min_expiration_ms:1 -a file:///C:/Users/Darkspirit/Downloads/discord_test/discord.html -a https://9gag.com -a https://www.spiegel.de/

10:20.24 INFO: Last good revision: f125ee6d1cef0ac302c3b4570b10b251a4638c54
10:20.24 INFO: First bad revision: 5cd110df8612bd173908ec93846b70f53bd9bde7
10:20.24 INFO: Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=f125ee6d1cef0ac302c3b4570b10b251a4638c54&tochange=5cd110df8612bd173908ec93846b70f53bd9bde7

Keywords: regression

[Tracking Requested - why for this release]: This is a noticeable correctness problem that shows up occasionally with WebRender.

Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

Wontfix for 67 but we could still potentially take a patch for 68 beta.

Comment on attachment 9068038 [details]
Bug 1553295 - let masks be active in blobs.

Beta/Release Uplift Approval Request

  • User impact if declined: Incorrect rendering on discord after image cache purge
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Pretty low. It's a very minor code change that moves that code toward the original intent.
  • String changes made/needed:
Attachment #9068038 - Flags: approval-mozilla-beta?

Comment on attachment 9068038 [details]
Bug 1553295 - let masks be active in blobs.

webrender fix, approved for 68.0b7

Attachment #9068038 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

I managed to reproduce the issue on Firefox 69.0a1 (2019-05-20), under Windows 10x64, using the STR from comment 13.
I also managed to verify the issue on Firefox 69.0a1 (2019-06-05) and on Firefox 68.0b7, under Windwos 10x64, macOS 10.11.6 and under Ubuntu 18.04x64, using the same STR as above.
It appears that on fixed builds, the icon visible after opening other tabs, so it's not necessary to hover over the icon in order to make it visible.
Alexis, can you please confirm that this is the expected result on these builds?

Flags: needinfo?(a.beingessner)

That sounds like the bug has been fixed to me (and I have not seen it day-to-day since either).

Flags: needinfo?(a.beingessner)

Taking in consideration Comment 23 and Comment 24, I'm marking this issue as Verified-Fixed.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
Regressions: 1624532
Has Regression Range: --- → yes

(In reply to Mihai Boldan, QA [:mboldan] from comment #25)

Taking in consideration Comment 23 and Comment 24, I'm marking this issue as Verified-Fixed.

Yes, sorry, this is fixed.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: