Bug 1553295 - let masks be active in blobs. r=jrmuizel a=jcristau

There doesn't seem to be a reason *not* to do this (merely an omission),
and the results we get without it are messing up somewhere with invalidation
and image cache management.

This is likely just a bandaid over a more serious issue, but if we never observe
that issue, does it exist..?

Differential Revision: https://phabricator.services.mozilla.com/D32833